<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kelompok4.eyewise.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.kelompok4.eyewise.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_alarm"
        android:name="com.kelompok4.eyewise.ui.alarm.AlarmFragment"
        android:label="@string/title_alarm"
        tools:layout="@layout/fragment_alarm" />
</navigation>